# PDFMathTranslate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  2025-02-23-13-38-04-chatgpt.md  Dockerfile  Dockerfile.Demo  Dockerfile.zh  LICENSE  README.md  README_ja-JP.md  README_zh-CN.md  app.json  docker-compose.yml  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  setup.bat  setup.cfg  setup.py
.codeboarding/: Application Orchestration.md  Configuration and Caching.md  Document Layout Analysis.md  High-Level Translation Logic.md  PDF Content Processing.md  Translation Service Management.md  User Interface and Server Backends.md  on_boarding.md
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: blank.yaml  bug_report.md  功能请求.md  功能请求_cn.yaml  功能请求_en.yaml  问题反馈.md  问题反馈_cn.yaml  问题反馈_en.yaml
.github/workflows/: black.format.yml  docker-ghcr-and-win64.yml  docker-ghcr-publish.yml  docker-ghrc-dev.yml  docker-publish.yml  exe-build.yml  fork-build.yml  fork-test-and-build.yml  fork-test.yml  issue-translator.yml  lint.yml  pr-lint.yml  python-build.yml  python-publish.yml  python-test.yml  release.yml
docs/: ADVANCED.md  APIS.md  Documentation-of-Translation-Services----翻译服务文档.md  FAQ.md  Home.md  README_GUI.md  README_ja-JP.md  README_ko-KR.md  README_zh-CN.md  README_zh-TW.md  index.md  supported_languages.md
docs/advanced/: ADVANCED.md  ADVANCED_usage.md  Documentation-of-Translation-Services.md  Language-Codes.md  README_GUI.md  advanced.md  introduction.md
docs/community/: CODE_OF_CONDUCT.md  Contribution-Guide.md
docs/getting-started/: INSTALLATION_commandline.md  INSTALLATION_docker.md  INSTALLATION_gui.md  INSTALLATION_uv.md  INSTALLATION_winexe.md  USAGE_commandline.md  USAGE_webui.md  USAGE_zotero-plugin.md  getting-started.md
docs/wiki/: Home.md  Language-Codes----语言代码.md
gui/: README.MD  README.md  main.py
pdf2zh/: __init__.py  _saslprep.py  arcfour.py  ascii85.py  backend.go  backend.py  backend_fastapi.py  cache.py  ccitt.py  cmapdb.py  config.py  const.py  converter.py  converter2.py  data_structures.py  doclayout.py  encodingdb.py  entrance.py  fontmetrics.py  glyphlist.py  gui.py  high_level.py  image.py  interface.py  jbig2.py  layout.py  lzw.py  main.py  mcp_server.py  pdf2zh.py  pdfcolor.py  pdfcompiler.py  pdfdevice.py  pdfdocument.py  pdfexceptions.py  pdffont.py  pdfinterp.py  pdfpage.py  pdfparser.py  pdftypes.py  (+5 more)
pdf2zh/config/: __init__.py  cli_env_model.py  main.py  model.py  translate_engine_model.py
pdf2zh/static/css/: gui.css
pdf2zh/translator/: __init__.py  base_rate_limiter.py  base_translator.py  cache.py  utils.py
pdf2zh/translator/rate_limiter/: qps_rate_limiter.py
pdf2zh/translator/translator_impl/: anythingllm.py  azueopenai.py  azure.py  azureopenai.py  bing.py  deepl.py  deeplx.py  dify.py  google.py  modelacope.py  ollama.py  openai.py  qwenmt.py  silicon.py  siliconflow.py  tmt.py  xinference.py
pdf2zh/utils/asynchronize/: __init__.py
script/: Dockerfile.China  Dockerfile.Demo  _pystand_static.int  entrypoint.sh  setup.bat
test/: test_cache.py  test_converter.py  test_doclayout.py  test_translator.py  test_translator.py.disable
tests/: test_arcfour.py  test_ascii85.py  test_casting.py  test_ccitt.py  test_cmapdb.py  test_data_structures.py  test_encodingdb.py
tests/config/: conftest.py  test_main.py  test_model.py
tools/: backend.py  tasks.py
webapp/: .gitignore  README.md  main.js  package.json
